--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Tshilidzi Mulibana</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
-    <h3>
+    <a href="about.html">About me</a>
+    <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       named for its historical crescent shape. Croissant and other viennoiserie
       are made of a layered yeast-leavened dough.
-    </h3>
+    </p>
     <footer>
       <a href="">Homepage</a>
       <a href="">Photo</a>
