--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Tshilidzi Mulibana</title>
+    <title>The best croissant in New York - Croissant.com</title>
+    <meta name="description" content="Taste the best croissant in town" />
   </head>
   <body>
     <h1>🥐 Croissant</h1>
-    <a href="about.html">About me</a>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissant and other viennoiserie
-      are made of a layered yeast-leavened dough.
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="">Homepage</a>
-      <a href="">Photo</a>
-      <a href="">Contact</a>
+      <a href="homepage" title="Home"> Homepage</a>
+      <a href="photo.html" title="Croissant photo"> Photo</a>
+      <a href="contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
