--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     <title>Homepage</title>
   </head>
   <body>
-    <h1>About me</h1>
+    <h1>🥐Contact Us</h1>
+    <p>
+      Email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a>
+      for more info🥐
+    </p>
+    <footer>
+      <a href="index.html" title="Home"> Homepage</a>
+      <a href="photo.html" title="Croissant photo"> Photo</a>
+      <a href="contact.html" title="Contact Croissant.com"> Contact</a>
+    </footer>
   </body>
 </html>
