--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Homepage</title>
+    <title>ContactUs</title>
   </head>
   <body>
     <h1>🥐Contact Us</h1>
     <p>
-      Email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a>
+      To contact us, please email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a>
       for more info🥐
     </p>
     <footer>
