--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>The best croissant in New York - Croissant.com</title>
-    <meta name="description" content="Taste the best croissant in town" />
+    <title>Best Croissant in the area</title>
+    <meta name="description" content="Learn more about croissant" />
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -16,7 +17,7 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="homepage" title="Home"> Homepage</a>
+      <a href="index.html" title="Home"> Homepage</a>
       <a href="photo.html" title="Croissant photo"> Photo</a>
       <a href="contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
